sealights: Node.js instrumentation Task

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -97,6 +97,7 @@
 
 # renovate groupName=sealights
 /task/sealights-go-oci-ta          @ascerra @flacatus @psturc @Dannyb48
+/task/sealights-nodejs-oci-ta      @ascerra @flacatus @psturc @Dannyb48
 /task/sealights-python-oci-ta      @ascerra @flacatus @psturc @Dannyb48
 
 # renovate groupName=build-vm-image
