--- a/renovate.json
+++ b/renovate.json
@@ -194,6 +194,7 @@
       "groupName": "sealights",
       "matchFileNames": [
         "task/sealights-go-oci-ta/**",
+        "task/sealights-nodejs-oci-ta/**",
         "task/sealights-python-oci-ta/**"
       ]
     }
