docker-build-oci-ta: fix a copy-paste mistake in the patch
There was a copy-paste mistake in
`pipelines/docker-build-oci-ta/patch.yaml` causing the
`sast-shell-check` bundle to be used instead of `sast-unicode-check`.

Related: https://issues.redhat.com/browse/OSH-763
Related: https://issues.redhat.com/browse/OSH-805

--- a/pipelines/docker-build-oci-ta/patch.yaml
+++ b/pipelines/docker-build-oci-ta/patch.yaml
@@ -168,7 +168,7 @@
 # sast-unicode-check
 - op: replace
   path: /spec/tasks/14/taskRef/name
-  value: sast-shell-check-oci-ta
+  value: sast-unicode-check-oci-ta
 - op: add
   path: /spec/tasks/14/params/-
   value:
