docker-build-oci-ta: protect transitions of sast-*check tasks
... to avoid mistakes like the one fixed by the previous commit
in the future.

Closes: https://github.com/konflux-ci/build-definitions/pull/1884

--- a/pipelines/docker-build-oci-ta/patch.yaml
+++ b/pipelines/docker-build-oci-ta/patch.yaml
@@ -113,6 +113,9 @@
   path: /spec/tasks/5/workspaces/0
 
 # sast-snyk-check
+- op: test
+  path: /spec/tasks/9/taskRef/name
+  value: sast-snyk-check
 - op: replace
   path: /spec/tasks/9/taskRef/name
   value: sast-snyk-check-oci-ta
@@ -132,6 +135,9 @@
   path: /spec/tasks/9/workspaces/0
 
 # sast-coverity-check
+- op: test
+  path: /spec/tasks/11/taskRef/name
+  value: sast-coverity-check
 - op: replace
   path: /spec/tasks/11/taskRef/name
   value: sast-coverity-check-oci-ta
@@ -149,6 +155,9 @@
   path: /spec/tasks/11/workspaces/0
 
 # sast-shell-check
+- op: test
+  path: /spec/tasks/13/taskRef/name
+  value: sast-shell-check
 - op: replace
   path: /spec/tasks/13/taskRef/name
   value: sast-shell-check-oci-ta
@@ -166,6 +175,9 @@
   path: /spec/tasks/13/workspaces/0
 
 # sast-unicode-check
+- op: test
+  path: /spec/tasks/14/taskRef/name
+  value: sast-unicode-check
 - op: replace
   path: /spec/tasks/14/taskRef/name
   value: sast-unicode-check-oci-ta
