feat(KONFLUX-3935) Add pruning check to FBC pipeline
Signed-off-by: Nate Marsella <nmarsell@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -58,6 +58,7 @@
 /task/fbc-fips-check                            @konflux-ci/integration-service-maintainers
 /task/fbc-fips-check-oci-ta                     @konflux-ci/integration-service-maintainers
 /task/fbc-related-image-check                   @konflux-ci/integration-service-maintainers
+/task/fbc-target-index-pruning-check            @konflux-ci/integration-service-maintainers
 /task/fbc-validation                            @konflux-ci/integration-service-maintainers
 /task/inspect-image                             @konflux-ci/integration-service-maintainers
 /task/sbom-json-check                           @konflux-ci/integration-service-maintainers
