--- a/renovate.json
+++ b/renovate.json
@@ -89,6 +89,7 @@
         "task/fbc-fips-check-oci-ta/**",
         "task/fbc-fips-check/**",
         "task/fbc-related-image-check/**",
+        "task/fbc-target-index-pruning-check/**",
         "task/fbc-validation/**",
         "task/fips-operator-bundle-check-oci-ta/**",
         "task/fips-operator-bundle-check/**",
