Fix renovate groupName

--- a/renovate.json
+++ b/renovate.json
@@ -198,6 +198,12 @@
         "task/sealights-nodejs-oci-ta/**",
         "task/sealights-python-oci-ta/**"
       ]
+    },
+    {
+      "groupName": "pnc",
+      "matchFileNames": [
+        "task/pnc-prebuild-git-clone-oci-ta/**"
+      ]
     }
   ],
   "postUpdateOptions": [
