source-build/0.2: arbitrary change (#1907)
Needed to add the task to the data-acceptable-bundles image.

When merging https://github.com/konflux-ci/build-definitions/pull/1865,
the build-acceptable-bundles failed. This meant the new versions of all
tasks updated in that PR were missing from data-acceptable-bundles.

Due to the way the push pipeline is set up, making a change to the
affected tasks is the only way to add them to data-acceptable-bundles.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/source-build/0.2/source-build.yaml
+++ b/task/source-build/0.2/source-build.yaml
@@ -30,7 +30,7 @@ spec:
     - name: SOURCE_IMAGE_DIGEST
       description: The source image digest.
     - name: IMAGE_REF
-      description: Image reference of the built image
+      description: Image reference of the built image.
   workspaces:
     - name: workspace
       description: The workspace where source code is included.
