--- a/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
+++ b/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
@@ -36,7 +36,7 @@ spec:
     - name: BUILD_RESULT
       description: Build result.
     - name: IMAGE_REF
-      description: Image reference of the built image
+      description: Image reference of the built image.
     - name: SOURCE_IMAGE_DIGEST
       description: The source image digest.
     - name: SOURCE_IMAGE_URL
