buildah: remove quotes from BASE_IMAGES, again
The previous solution only worked if the entire base image was quoted:

    jq -n -r --arg pullspec '"registry.com/foo:v1"' \
        '$pullspec | sub("\"?(?<image>[^\"]*)\"?" ; .image)'

    registry.com/foo:v1

But didn't work if the quotes were inside the base image, e.g.

    jq -n -r --arg pullspec 'registry.com/foo:"v1"' \
        '$pullspec | sub("\"?(?<image>[^\"]*)\"?" ; .image)'

    registry.com/foo:v1"

This can happen for Containerfiles like this one:

    ARG version="v1"
    FROM registry.com/foo:$version

Simplify the code to just strip all double-quotes from the base image
pullspecs, and add handling for single-quotes as well.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.3/buildah-remote-oci-ta.yaml
@@ -402,7 +402,9 @@ spec:
 
       dockerfile-json "${BUILD_ARG_FLAGS[@]}" "$dockerfile_copy" >/shared/parsed_dockerfile.json
       BASE_IMAGES=$(
-        jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName | select(test("^oci-archive:") | not) | sub("\"?(?<image>[^\"]*)\"?" ; .image)' /shared/parsed_dockerfile.json
+        jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName | select(test("^oci-archive:") | not)' /shared/parsed_dockerfile.json |
+          tr -d '"' |
+          tr -d "'"
       )
 
       BUILDAH_ARGS=()
